# dea-conflux

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  check-code.sh  constraints.txt  docker-compose.yml  index_tiles.sh  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: CODEOWNERS.txt
.github/actions/: test.yml
.github/workflows/: coverage.yml  lint.yml  push.yml  test.yml
conda/: environment.yml
dea_conflux/: __init__.py  __main__.py  db.py  drill.py  hopper.py  io.py  my_func_stats  queues.py  stack.py  stats_dev_vs_prod-by-id-2.ipynb  types.py
deafrica_conflux/: __init__.py  __main__.py  __version__.py  _cli_db_to_csv.py  _cli_filter_from_queue.py  _cli_make_queue.py  _cli_package_delivery.py  _cli_run_from_queue.py  _cli_run_one_scene.py  _cli_stack.py  _vector_file_utils.py  cli.py  db.py  drill.py  group_polygons.py  hopper.py  id_field.py  io.py  queues.py  stack.py
deafrica_conflux/cli/: common.py  db_to_csv.py  delete_queue.py  filter_from_queue.py  get_dataset_ids.py  get_ids.py  group_options.py  logs.py  main.py  make_queue.py  push_to_queue.py  run_from_list.py  run_from_queue.py  run_from_text.py  run_from_txt.py  split_polygons_by_region.py  stack.py
deafrica_conflux/cmd/: cli.py  common.py  db_to_csv.py  delete_queue.py  get_ids.py  make_queue.py  package_delivery.py  push_to_queue.py  run_from_queue.py  run_one_scene.py  stack.py
deafrica_conflux/plugins/: __init__.py  _plugin_utils.py  utils.py  waterbodies.conflux.py  waterbodies_timeseries.py  waterbodies_timeseries_v2.py
doc/: dea-conflux-control-flow-local.drawio  dea-conflux-control-flow.drawio
docker/: Dockerfile  docker-compose.yml  requirements.in  requirements.txt
examples/: ga_ls_wo_3_flags.conflux.py  waterbodies.conflux.py  waterbodies_c3.conflux.py  wit_ls5.conflux.py  wit_ls7.conflux.py  wit_ls8.conflux.py  wit_ls9.conflux.py  wofs_albers_flags.conflux.py
notebooks/: GetDatasetIDs.ipynb  MakeTestValues.ipynb  RunConflux.ipynb  SplitPolygonsUsingRegionCode.ipynb  StackParquetFiles.ipynb  TestNewDrillFunctions.ipynb
notebooks/data/: dataset_ids.txt
tests/: README.md  TestDrill.ipynb  TestHopper.ipynb  Untitled.ipynb  constants.py  setup_test_datacube.sh  test_cli.py  test_db.py  test_drill.py  test_get_dataset_ids.py  test_get_dataset_ids_cli.py  test_hopper.py  test_id_field.py  test_io.py  test_main.py  test_push_to_queue_cli.py  test_queue.py  test_queues.py  test_stack.py
tests/data/: edge_overlap.geojson  edumesbb2.geojson  eduyx58ux.geojson  edvntx0mu.geojson  north_overlap.dbf  north_overlap.shp  north_overlap.shx  same_user_id_value.dbf  same_user_id_value.shx  small_south_overlay.dbf  small_south_overlay.shp  small_south_overlay.shx  sum_pv_wet.conflux.py  sum_wet.conflux.py  sum_wet_c3.conflux.py  sum_wet_missing_transform.conflux.py  test_push_to_queue_from_txt.txt  test_south.shp  test_south.shx  test_south_overlay.shp  test_south_overlay.shx  waterbodies_canberra.dbf  waterbodies_canberra.shp  waterbodies_canberra.shx
tests/data/canberra_waterbodies_pq/: waterbodies_234fec8f-1de7-488a-a115-818ebd4bfec4_20000202-234328-500000.pq  waterbodies_78115dab-5216-49b7-9283-05bdd38fcf41_20210314-235643-000000.pq
tests/data/polygons_split_by_region/: 154071.parquet  204048.parquet
tests/data/qld_waterbodies_csv/: r4ucrn3y1_v2.csv
tests/data/qld_waterbodies_pq/: wit_ls5_aa7116e4-b27d-466b-b987-7c99f7f29b63_19870523-234949-486906.pq
tests/data/wit_r3bz75m73_pq/20140801/: wit_ls7_d5a651f3-d811-417a-929b-566f336a0f94_20140801-235954-065250.pq
tests/data/wit_r3bz75m73_pq/20140802/: wit_ls7_203b1a58-dc1d-479f-b516-b165133e018f_20140802-000018-010783.pq
tests/data/wit_r3bz75m73_pq/20140810/: wit_ls8_a5490108-efff-4f9f-877d-0b0df212877f_20140810-000241-924258.pq  wit_ls8_d42ddb0a-d126-4cf2-af22-f3a154ad25d7_20140810-000217-980864.pq
tests/data/wit_r3bz75m73_pq/20140817/: wit_ls7_a17087cf-6295-4ba1-aa01-0880360e917a_20140817-235954-063539.pq
tests/data/wit_r3bz75m73_pq/20140818/: wit_ls7_a37b3b5b-740b-4850-9208-1f84ef72cdf7_20140818-000018-020885.pq
tests/data/wit_r3bz75m73_pq/20140826/: wit_ls8_200d6abb-4e83-4f98-8b1e-ee0d8e5b2646_20140826-000220-204754.pq  wit_ls8_e09d34f0-7e85-46e1-a7b4-d8184163912c_20140826-000244-139570.pq
tests/plugins/: sum_wet.py  timeseries.py
