# pyproject.toml
[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "deafrica-conflux"
description = "Digital Earth Africa tool for processing bulk polygon drills"
authors = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
maintainers = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
readme = {file = "README.md", content-type = "text/markdown"}
# If you change the License, remember to change the Trove Classifier!
license = {file = "LICENSE"}
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: GIS',
    'Topic :: Scientific/Engineering :: Hydrology',
]
requires-python = ">=3.6"
dependencies= [
    "boto3",
    "boto3-stubs[s3,sqs]",
    "botocore",
    "click",
    "datacube",
    "deafrica-tools>=2.1.1",
    "fsspec",
    "geopandas",
    "numpy",
    "pandas",
    "pyarrow",
    "python-geohash",
    "rasterio",
    "s3urls",
    "shapely",
    "SQLAlchemy",
    "tqdm",
    "xarray",
    # Code style
    "black",
    "flake8",
    "isort",
    # Testing
    "pytest",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/digitalearthafrica/deafrica-conflux"
Repository = "https://github.com/digitalearthafrica/deafrica-conflux"
Documentation = "https://github.com/digitalearthafrica/deafrica-conflux#readme"
"Bug Tracker" = "https://github.com/digitalearthafrica/deafrica-conflux/issues"

[project.scripts]
deafrica-conflux="deafrica_conflux.cli.main:main"

[tool.setuptools]
packages = ["deafrica_conflux"]

[tool.setuptools_scm]
write_to = "deafrica_conflux/__version__.py"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pyright]
reportTypedDictNotRequiredAccess = false
reportOptionalMemberAccess = false

[tool.black]
line-length = 100

[tool.isort]
skip_gitignore = true
# Configure isort to be compatible with black.
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
